# eq-fetch

./: .gitignore  19840812.xml  20220812.xml  README.md  bibliography_search.py  catalog.py  eq_downloader.py  formatting.py  hypocenter_search.py  isc.xml  main.py  parser_adds.py  pyproject.toml  quakeML.py  quakeML2.py  requiements.txt  test.csv  test.json  test.xml  test_qml.py  test_search.csv  test_search.json  write.py  xml_temp
config/: catalog_dl.yaml
data/: event_index.db  isc_event_index.csv
src/: bibliography_search.py  catalog.py  formatting.py  hypocenter_search.py  parser_adds.py  test_qml.py
src/eq-fetch/: cli.py  hypocenter_search.py
src/eq_fetch/: __init__.py  biblio.py  cli.py
src/eq_fetch/need_to_refractor/: catalog.py  eq_downloader.py  parser_adds.py  quakeML2.py
src/eq_fetch/temp_refractor/: cli.py  downloader.py  export.py  filter.py  search.py
